add select and big test is ok

--- a/htmlPages/formHtml.html
+++ b/htmlPages/formHtml.html
@@ -20,6 +20,14 @@
             <input type="radio" id="rgender" name="gender" value="female"/> <label for="female">Female</label>
             <input type="radio" id="rgender" name="gender" value="undefined" checked/> <label for="undefined">Undefined</label>
         </div>
+        <div class="Situation">
+            <label for="lSituation">Situation</label>
+            <select name="sSituation" id="sSituation">
+                <option>No Job</option>
+                <option>Job in a company</option>
+                <option>Entrepreneur</option>
+            </select>
+        </div>
         <div class="Birthday">
             <label for="dBirthday">Birthday</label>
             <input
